Add full flags